# wiki-entity-linker

./: Dockerfile  Makefile  README.md  api_linker.py  create_qlever_text_files.py  link_benchmark.py  link_benchmark_entities.py  link_entities.py  link_text.py  pyproject.toml  requirements.txt
benchmarks/: wiki-fair-v2-dev-no-coref.benchmark.jsonl  wiki-fair-v2-dev-no-coref.metadata.json  wiki-fair-v2-dev.benchmark.jsonl  wiki-fair-v2-dev.metadata.json  wiki-fair-v2-test.benchmark_statistics.jsonl
configs/: refined.config.json  trained_model.config.json
scripts/: api_linker.py  train_own_linker.py
src/: settings.py
src/elevant/: settings.py
src/elevant/helpers/: entity_database_reader.py
src/elevant/linkers/: forkserver_linking_system.py  hyperlink_reference_linker.py  hyperlinks_only_linker.py  linkers.py  linking_system.py  trained_entity_linker.py
src/elevant/models/: entity_database.py
src/helpers/: entity_database_reader.py
src/linkers/: forkserver_linking_system.py  hyperlink_reference_linker.py  hyperlinks_only_linker.py  link_entity_linker.py  link_text_entity_linker.py  linkers.py  linking_system.py  trained_entity_linker.py
src/models/: entity_database.py
src/prediction_readers/: wexea_prediction_reader.py
src/wiki_entity_linker/helpers/: entity_database_reader.py
src/wiki_entity_linker/linkers/: forkserver_linking_system.py  hyperlink_reference_linker.py  hyperlinks_only_linker.py  linkers.py  linking_system.py  prefix_trie_linker.py  trained_entity_linker.py
src/wiki_entity_linker/models/: entity_database.py
(+2 files in other folders)
