[project]
name = "wiki_entity_linker"
version = "0.2.0"
authors = [
	{ name="Natalie Prange", email="prange@cs.uni-freiburg.de" }
]
maintainers = [ { name="Natalie Prange", email="prange@cs.uni-freiburg.de" } ]
description = "Wikipedia Entity Linker"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["nlp", "entity-linking", "wikipedia"]
classifiers = [
	"Programming Language :: Python :: 3"
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.scripts]

[project.urls]
Homepage = "https://github.com/ad-freiburg/wiki_entity_linker/"
Issues = "https://github.com/ad-freiburg/wiki_entity_linker/issues"

[build-system]
requires = ["setuptools>=61.0, <=67.0"]
build-backend = "setuptools.build_meta"